# tools

./: .gitignore  Pipfile  README.md  example_two_nested_bad.json  pj.py  pyproject.toml
examples/json/: example_one_shallow.json  example_one_shallow_bad.json  example_three_heavy_nested.json  example_two_nested.json
